# Crew-Ai-Course

crew-ai-project/: .gitignore  Note.txt  content.md  crewai_flow.html  pyproject.toml
crew-ai-project/src/crew_ai_project/: __init__.py  main.py
crew-ai-project/src/crew_ai_project/crews/config/: agents.yaml
crew-ai-project/src/crew_ai_project/crews/teaching_crew/: teachingcrew.py
crew-ai-project/src/crew_ai_project/crews/teaching_crew/config/: tasks.yaml
crewai_lite_llm_02/: README.md  poem.txt  pyproject.toml
crewai_lite_llm_02/src/crewai_lite_llm_02/: main.py  main1.py  main2.py
crewai_lite_llm_02/src/crewai_lite_llm_02/crews/dev_crew/: dev_crew.py  dev_crew_02.py
crewai_lite_llm_02/src/crewai_lite_llm_02/crews/dev_crew/config/: agents.yaml  tasks.yaml
crewai_memory_base/: README.md  llm.py  pyproject.toml
crewai_memory_base/src/crewai_memory_base/: knowledgecrew.py  main.py  memory.py
crewai_project01/: README.md  poem.txt  pyproject.toml
crewai_project01/src/crewai_project01/crews/poem_crew/: poem_crew.py
detailed-package-project2/: pyproject.toml
detailed-package-project2/src/detailed_package_project2/: __init__.py  hello.py
detailed-package-project2/src/nested/nestedf1/: myfile.py
lite-llm-project3/: pyproject.toml
lite-llm-project3/src/lite_llm_project3/: __init__.py  hello.py
project-04/: crewai_flow.html  fun_fact.md  pyproject.toml  router_fun_fact.md
project-04/src/project_04/: __init__.py  chainprompt.py  main.py  routerpattern01.py  routerpattern02.py
rag_system_using_crewai/: README.md  poem.md  pyproject.toml
rag_system_using_crewai/src/rag_system_using_crewai/: knowlegdecrew.py  main.py
rag_system_using_crewai/src/rag_system_using_crewai/crews/poem_crew/: poem_crew.py
