[project]
name = "crew-ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aakashmoondive502", email = "aakash.prajapati@moondive.co" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.108.0",
    "crewai-tools>=0.38.1",
]

[project.scripts]
crew-ai-project = "crew_ai_project:main"
crew-ai = "crew_ai_project.main:kickoff"
plot = "crew_ai_project.main:plot"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
