[project]
name = "crewai_lite_llm_02"
version = "0.1.0"
description = "crewai-lite-llm-02 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
kickoff = "crewai_lite_llm_02.main:kickoff"
plot = "crewai_lite_llm_02.main:plot"

run_litellm_flow = "crewai_lite_llm_02.main1:run_litellm_flow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
