[project]
name = "crewai_project01"
version = "0.1.0"
description = "crewai-project01 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
kickoff = "crewai_project01.main:kickoff"
plot = "crewai_project01.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
