[project]
name = "rag_system_using_crewai"
version = "0.1.0"
description = "rag-system-using-crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
kickoff = "rag_system_using_crewai.main:kickoff"
plot = "rag_system_using_crewai.main:plot"

knowlegde-crew = "rag_system_using_crewai.knowlegdecrew:kickoff_crew"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
